--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ KEYCLOAK_CLIENT_SECRET=replace-with-client-secret
 AUTH_SECRET=replace-with-random-secret
 
 # Public API endpoint exposed to the frontend
-NEXT_PUBLIC_API_URL=http://localhost:3001
+API_URL=http://localhost:3001
