--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -7,7 +7,7 @@ services:
       - KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}
       - KEYCLOAK_CLIENT_SECRET=${KEYCLOAK_CLIENT_SECRET}
       - AUTH_SECRET=${AUTH_SECRET}
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+      - API_URL=${API_URL}
       - NEXTAUTH_URL=${NEXTAUTH_URL}
     restart: unless-stopped
     networks:
