--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -46,12 +46,12 @@ jobs:
           context: .
           push: false
           load: true
-          tags: app-qg-front:scan
+          tags: app-terrain-front:scan
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: app-qg-front:scan
+          image-ref: app-terrain-front:scan
           format: "sarif"
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
