--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
+    "maplibre-gl": "^5.16.0",
     "next": "^16.0.9",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-map-gl": "^8.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
